--- a/hasil_lab.html
+++ b/hasil_lab.html
@@ -521,10 +521,10 @@
       </div>
       <p class="summary-text" id="summaryText">Sebagian besar hasil pemeriksaan berada dalam batas normal. Ada beberapa nilai yang sedikit meningkat yang memerlukan perhatian. Disarankan untuk melakukan follow-up pemeriksaan dalam 2 minggu dan konsultasi dengan dokter.</p>
      </div><!-- Action Buttons -->
-     <div class="action-section"><button class="btn-action secondary" onclick="handleBack()">
+     <div class="action-section"><button class="btn-action secondary">
        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
-       </svg><span id="backButtonText">Kembali ke Dashboard</span> </button> <button class="btn-action primary" onclick="handleDownload()">
+       </svg><a href="dashboard_pasien.html" id="backButtonText">Kembali ke Dashboard</a> </button> <button class="btn-action primary" onclick="handleDownload()">
        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8" />
        </svg> Unduh Hasil </button>
