--- a/hasil_pemeriksaan.html
+++ b/hasil_pemeriksaan.html
@@ -505,10 +505,10 @@
    <div class="content-wrapper">
     <!-- Header -->
     <div class="header-bar">
-     <button class="btn-back" id="backBtn" onclick="handleBack()">
+     <a href="dashboard_pasien.html" class="btn-back" id="backBtn">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor">
        <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
-      </svg></button>
+      </svg></a>
      <div class="header-title">
       <h1 id="pageTitle">Hasil Pemeriksaan Pranikah</h1>
      </div>
@@ -629,10 +629,10 @@
      </div><!-- Divider -->
      <div class="divider"></div><!-- Action Buttons -->
      <div class="action-section">
-      <button class="btn-action secondary" id="backButton" onclick="handleBack()">
+      <button class="btn-action secondary" id="backButton">
        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
-       </svg><span id="backButtonText">Kembali ke Dashboard</span> </button> <button class="btn-action primary" onclick="handleDownload()">
+       </svg><a href="dashboard_pasien.html" id="backButtonText">Kembali ke Dashboard</a> </button> <button class="btn-action primary" onclick="handleDownload()">
        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M9 19l3 3m0 0l3-3m-3 3v-7" />
        </svg> Unduh Laporan </button>
