--- a/hasil_srq.html
+++ b/hasil_srq.html
@@ -789,10 +789,10 @@
 
     // Handle back button
     function handleBack() {
-      // In a real app, this would navigate to dashboard
-      // For demo purposes, show a message
-      alert('Kembali ke halaman Dashboard Pasien');
-      // window.location.href = '/dashboard';
+      alert('Kembali ke Halaman Test SRQ');
+        setTimeout(() => {
+          window.location.href = 'dashboard_bidan.html';
+        }, 500);
     }
 
     // Handle download
