--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
          </svg>
         </div>
         <h3 class="card-title" id="patientCardTitle">Login sebagai Pasien</h3>
-        <p class="card-description">Akses layanan pemeriksaan kesehatan pranikah, lihat hasil pemeriksaan, dan konsultasi dengan tenaga medis profesional</p><button class="btn btn-login btn-patient" onclick="handleLogin('patient')"> Masuk </button>
+        <p class="card-description">Akses layanan pemeriksaan kesehatan pranikah, lihat hasil pemeriksaan, dan konsultasi dengan tenaga medis profesional</p><a href="login_pasien.html" class="btn btn-login btn-patient" onclick="handleLogin('patient')"> Masuk </a>
        </div>
       </div><!-- Midwife Card -->
       <div class="col-12 col-md-6 col-lg-5">
@@ -331,7 +331,7 @@
          </svg>
         </div>
         <h3 class="card-title" id="midwifeCardTitle">Login sebagai Bidan</h3>
-        <p class="card-description">Kelola data pasien, input hasil pemeriksaan, dan pantau riwayat kesehatan calon pengantin dengan mudah</p><button class="btn btn-login btn-midwife" onclick="handleLogin('midwife')"> Masuk </button>
+        <p class="card-description">Kelola data pasien, input hasil pemeriksaan, dan pantau riwayat kesehatan calon pengantin dengan mudah</p><a href="login_bidan.html" class="btn btn-login btn-midwife" onclick="handleLogin('midwife')"> Masuk </a>
        </div>
       </div>
      </div>
