--- a/login_bidan.html
+++ b/login_bidan.html
@@ -317,7 +317,9 @@
      </div><!-- Password Field -->
      <div class="form-group-custom"><label for="password" id="passwordLabel">Password</label> <input type="password" id="password" placeholder="Masukkan password Anda" required autocomplete="off">
      </div><!-- Form Actions -->
-     <div class="form-actions"><button type="submit" class="btn-login" id="loginButton"> <span id="loginButtonText">Login</span> </button> <button type="button" class="btn-back-bottom" onclick="handleBack()"> <span id="backButtonText">Kembali ke Halaman Pembuka</span> </button>
+     <a href="dashboard_bidan.html" class="btn btn-login">
+      <span>Masuk</span>
+    </a>
      </div>
     </form><!-- Footer -->
     <div class="login-footer">
