--- a/test_srq.html
+++ b/test_srq.html
@@ -577,9 +577,9 @@
        </div>
       </div>
      </div><!-- Submit Button -->
-     <div class="submit-section"><button type="submit" class="btn btn-submit" id="submitBtn"> <span id="submitBtnText">Kirim Jawaban</span>
+     <div class="submit-section"><a href="dashboard_pasien.html" class="btn btn-submit" id="submitBtn"> <span id="submitBtnText">Kirim Jawaban</span>
        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" class="ms-2" style="display: inline-block; vertical-align: middle;"><path stroke-linecap="round" stroke-linejoin="round" d="M13 7l5 5m0 0l-5 5m5-5H6" />
-       </svg></button>
+       </svg></a>
      </div>
     </form>
    </div>
