--- a/baca_ebook.html
+++ b/baca_ebook.html
@@ -583,7 +583,7 @@
   <div class="main-wrapper"><!-- Header Navigation -->
    <nav class="header-nav">
     <div class="container">
-     <a href="#" class="back-link-header" onclick="handleBack(event)">
+     <a href="dashboard_pasien.html" class="back-link-header">
       <svg class="back-arrow" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M19 12H5M12 19l-7-7 7-7" />
       </svg><span id="backLinkText">Kembali ke Dashboard</span> </a>
     </div>
