--- a/login_pasien.html
+++ b/login_pasien.html
@@ -340,9 +340,12 @@
         <div class="invalid-feedback">
          Password harus diisi
         </div>
-       </div><!-- Login Button --> <button type="submit" class="btn btn-login" id="loginButton"> <span id="loginButtonText">Masuk</span> <span id="loadingSpinner" style="display: none;"> <span class="spinner-border spinner-border-sm me-2" role="status" aria-hidden="true"></span> <span>Memproses...</span> </span> </button>
+       </div><!-- Login Link -->
+       <a href="dashboard_pasien.html" class="btn btn-login">
+         <span>Masuk</span>
+       </a>
       </form><!-- Back Link -->
-      <div class="back-link-wrapper"><a href="#" onclick="goBackHome(event)" class="back-link">
+      <div class="back-link-wrapper"><a href="index.html" class="back-link">
         <svg class="back-arrow" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M19 12H5M12 19l-7-7 7-7" />
         </svg><span id="backLinkText">Kembali ke Halaman Utama</span> </a>
       </div>
