--- a/post_test.html
+++ b/post_test.html
@@ -436,9 +436,9 @@
  <body>
   <div class="main-wrapper"><!-- Header Navigation -->
    <nav class="header-nav">
-    <div class="container"><a href="#" class="back-link-header" onclick="handleBack(event)">
-      <svg class="back-arrow" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M19 12H5M12 19l-7-7 7-7" />
-      </svg><span>Kembali ke Dashboard</span> </a>
+    <div class="container"><a href="dashboard_pasien.html" class="back-link-header">
+        <svg class="back-arrow" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M19 12H5M12 19l-7-7 7-7" />
+        </svg><span id="backLinkText">Kembali ke Dashboard</span> </a>
     </div>
    </nav><!-- Content Container -->
    <div class="content-container">
