--- a/hasil_post_test.html
+++ b/hasil_post_test.html
@@ -7,807 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&amp;display=swap" rel="stylesheet">
   <script src="/_sdk/element_sdk.js"></script>
-  <style>
-    :root {
-      --soft-sage: #CFE8E5;
-      --soft-lavender: #E6E6FA;
-      --soft-blue: #D6E6F2;
-      --soft-beige: #FDF6EC;
-      --text-primary: #2D3748;
-      --text-secondary: #718096;
-      --text-tertiary: #A0AEC0;
-      --card-shadow: 0 4px 20px rgba(0, 0, 0, 0.06);
-      --status-normal: #A8D5BA;
-      --status-warning: #FFD4A3;
-      --status-urgent: #E8B4B8;
-    }
-
-    * {
-      font-family: 'Plus Jakarta Sans', sans-serif;
-    }
-
-    html, body {
-      height: 100%;
-      margin: 0;
-    }
-
-    body {
-      background: linear-gradient(135deg, var(--soft-beige) 0%, var(--soft-blue) 50%, var(--soft-lavender) 100%);
-      min-height: 100%;
-      color: var(--text-primary);
-    }
-
-    .main-container {
-      min-height: 100%;
-      padding: 2rem 1rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .content-wrapper {
-      width: 100%;
-      max-width: 700px;
-    }
-
-    /* Header with Back Button */
-    .header-bar {
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-      margin-bottom: 2.5rem;
-    }
-
-    .btn-back {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 44px;
-      height: 44px;
-      background: rgba(255, 255, 255, 0.9);
-      border: 2px solid rgba(207, 232, 229, 0.3);
-      border-radius: 14px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      flex-shrink: 0;
-    }
-
-    .btn-back:hover {
-      background: var(--soft-sage);
-      transform: translateX(-4px);
-      border-color: var(--soft-sage);
-    }
-
-    .btn-back svg {
-      width: 20px;
-      height: 20px;
-      color: var(--text-primary);
-      stroke-width: 2.5;
-    }
-
-    .header-title {
-      flex-grow: 1;
-    }
-
-    .header-title h1 {
-      font-size: 1.5rem;
-      font-weight: 700;
-      color: var(--text-primary);
-      margin: 0;
-    }
-
-    /* Patient Info Card */
-    .patient-card {
-      background: rgba(255, 255, 255, 0.95);
-      border-radius: 24px;
-      padding: 2.5rem;
-      box-shadow: var(--card-shadow);
-      margin-bottom: 2rem;
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.5);
-    }
-
-    .patient-header {
-      display: flex;
-      align-items: center;
-      gap: 1.5rem;
-      margin-bottom: 2rem;
-      padding-bottom: 2rem;
-      border-bottom: 2px solid rgba(207, 232, 229, 0.2);
-    }
-
-    .patient-avatar {
-      width: 80px;
-      height: 80px;
-      background: linear-gradient(135deg, var(--soft-sage), var(--soft-blue));
-      border-radius: 18px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 8px 24px rgba(207, 232, 229, 0.3);
-      flex-shrink: 0;
-    }
-
-    .patient-avatar svg {
-      width: 40px;
-      height: 40px;
-      color: var(--text-primary);
-    }
-
-    .patient-info h2 {
-      font-size: 1.375rem;
-      font-weight: 700;
-      color: var(--text-primary);
-      margin: 0 0 0.25rem 0;
-    }
-
-    .patient-info p {
-      font-size: 0.9rem;
-      color: var(--text-secondary);
-      margin: 0;
-    }
-
-    /* Score Display */
-    .score-section {
-      background: linear-gradient(135deg, rgba(207, 232, 229, 0.1), rgba(214, 230, 242, 0.1));
-      border-radius: 20px;
-      padding: 2rem;
-      margin-bottom: 2rem;
-      text-align: center;
-      border: 2px solid rgba(207, 232, 229, 0.2);
-    }
-
-    .score-label {
-      font-size: 0.9rem;
-      color: var(--text-secondary);
-      font-weight: 500;
-      text-transform: uppercase;
-      letter-spacing: 0.5px;
-      margin-bottom: 0.75rem;
-    }
-
-    .score-number {
-      font-size: 4.5rem;
-      font-weight: 700;
-      background: linear-gradient(135deg, var(--soft-sage), var(--soft-blue));
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-      margin: 0;
-      line-height: 1;
-    }
-
-    .score-max {
-      font-size: 1.25rem;
-      color: var(--text-secondary);
-      margin-top: 0.5rem;
-    }
-
-    /* Progress Bar */
-    .progress-wrapper {
-      margin-top: 2.5rem;
-    }
-
-    .progress-label {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 1rem;
-    }
-
-    .progress-label-text {
-      font-size: 0.9rem;
-      font-weight: 600;
-      color: var(--text-primary);
-    }
-
-    .progress-percentage {
-      font-size: 0.85rem;
-      font-weight: 600;
-      background: rgba(207, 232, 229, 0.3);
-      padding: 0.4rem 0.8rem;
-      border-radius: 8px;
-      color: var(--text-primary);
-    }
-
-    .progress {
-      height: 16px;
-      background: rgba(255, 255, 255, 0.6);
-      border-radius: 12px;
-      overflow: hidden;
-      box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.06);
-    }
-
-    .progress-bar-custom {
-      height: 100%;
-      background: linear-gradient(90deg, var(--soft-sage), var(--soft-blue));
-      border-radius: 12px;
-      transition: width 0.6s ease;
-      box-shadow: 0 4px 12px rgba(207, 232, 229, 0.4);
-    }
-
-    /* Status Badge */
-    .status-wrapper {
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-      margin-bottom: 2rem;
-    }
-
-    .status-badge {
-      display: flex;
-      align-items: center;
-      gap: 0.75rem;
-      padding: 1rem 1.5rem;
-      border-radius: 16px;
-      font-weight: 600;
-      font-size: 0.95rem;
-      flex: 1;
-    }
-
-    .status-badge.normal {
-      background: rgba(168, 213, 186, 0.15);
-      color: #2D5F47;
-      border: 2px solid rgba(168, 213, 186, 0.5);
-    }
-
-    .status-badge.warning {
-      background: rgba(255, 212, 163, 0.15);
-      color: #8B5A00;
-      border: 2px solid rgba(255, 212, 163, 0.5);
-    }
-
-    .status-badge.urgent {
-      background: rgba(232, 180, 184, 0.15);
-      color: #8B3A3F;
-      border: 2px solid rgba(232, 180, 184, 0.5);
-    }
-
-    .status-icon {
-      width: 24px;
-      height: 24px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .status-icon svg {
-      width: 20px;
-      height: 20px;
-    }
-
-    /* Interpretation Card */
-    .interpretation-card {
-      background: linear-gradient(135deg, rgba(230, 230, 250, 0.5), rgba(214, 230, 242, 0.5));
-      border-radius: 20px;
-      padding: 2rem;
-      margin-bottom: 2rem;
-      border: 2px solid rgba(230, 230, 250, 0.4);
-    }
-
-    .interpretation-title {
-      font-size: 1.1rem;
-      font-weight: 700;
-      color: var(--text-primary);
-      margin-bottom: 1rem;
-      display: flex;
-      align-items: center;
-      gap: 0.75rem;
-    }
-
-    .interpretation-title svg {
-      width: 22px;
-      height: 22px;
-      color: var(--soft-sage);
-    }
-
-    .interpretation-text {
-      font-size: 0.95rem;
-      line-height: 1.7;
-      color: var(--text-secondary);
-      margin: 0;
-    }
-
-    /* Recommendation Card */
-    .recommendation-card {
-      background: linear-gradient(135deg, rgba(207, 232, 229, 0.1), rgba(230, 230, 250, 0.1));
-      border-radius: 20px;
-      padding: 2rem;
-      border: 2px solid rgba(207, 232, 229, 0.2);
-      margin-bottom: 2rem;
-    }
-
-    .recommendation-title {
-      font-size: 1.1rem;
-      font-weight: 700;
-      color: var(--text-primary);
-      margin-bottom: 1rem;
-      display: flex;
-      align-items: center;
-      gap: 0.75rem;
-    }
-
-    .recommendation-title svg {
-      width: 22px;
-      height: 22px;
-      color: var(--soft-blue);
-    }
-
-    .recommendation-list {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    .recommendation-item {
-      display: flex;
-      gap: 1rem;
-      margin-bottom: 0.75rem;
-      font-size: 0.95rem;
-      color: var(--text-secondary);
-      line-height: 1.6;
-    }
-
-    .recommendation-item:last-child {
-      margin-bottom: 0;
-    }
-
-    .recommendation-dot {
-      width: 8px;
-      height: 8px;
-      background: var(--soft-sage);
-      border-radius: 50%;
-      margin-top: 0.5rem;
-      flex-shrink: 0;
-    }
-
-    /* Bottom Action */
-    .action-section {
-      display: flex;
-      gap: 1rem;
-    }
-
-    .btn-action {
-      flex: 1;
-      padding: 1rem;
-      border-radius: 16px;
-      border: 2px solid transparent;
-      font-weight: 600;
-      font-size: 0.95rem;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      text-align: center;
-      text-decoration: none;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 0.75rem;
-    }
-
-    .btn-action.primary {
-      background: linear-gradient(135deg, var(--soft-sage), #B8D8D4);
-      color: var(--text-primary);
-      box-shadow: 0 8px 24px rgba(207, 232, 229, 0.4);
-    }
-
-    .btn-action.primary:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 12px 32px rgba(207, 232, 229, 0.6);
-    }
-
-    .btn-action.secondary {
-      background: rgba(255, 255, 255, 0.9);
-      color: var(--text-primary);
-      border: 2px solid rgba(207, 232, 229, 0.3);
-    }
-
-    .btn-action.secondary:hover {
-      background: rgba(207, 232, 229, 0.1);
-      border-color: var(--soft-sage);
-    }
-
-    .btn-action svg {
-      width: 18px;
-      height: 18px;
-    }
-
-    /* Chart Grid */
-    .chart-grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 1.5rem;
-      margin-bottom: 2rem;
-    }
-
-    .chart-item {
-      background: rgba(255, 255, 255, 0.7);
-      border-radius: 16px;
-      padding: 1.5rem;
-      text-align: center;
-      border: 2px solid rgba(207, 232, 229, 0.2);
-    }
-
-    .chart-item-label {
-      font-size: 0.8rem;
-      color: var(--text-tertiary);
-      text-transform: uppercase;
-      letter-spacing: 0.3px;
-      margin-bottom: 0.75rem;
-      font-weight: 600;
-    }
-
-    .chart-item-value {
-      font-size: 1.75rem;
-      font-weight: 700;
-      background: linear-gradient(135deg, var(--soft-sage), var(--soft-blue));
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-    }
-
-    /* Search Bar */
-    .search-section {
-      margin-bottom: 2rem;
-    }
-
-    .search-container {
-      position: relative;
-    }
-
-    .search-input {
-      width: 100%;
-      padding: 1rem 1.5rem 1rem 3.5rem;
-      border: 2px solid rgba(207, 232, 229, 0.3);
-      border-radius: 16px;
-      font-size: 0.95rem;
-      background: rgba(255, 255, 255, 0.9);
-      transition: all 0.3s ease;
-      color: var(--text-primary);
-    }
-
-    .search-input::placeholder {
-      color: var(--text-tertiary);
-    }
-
-    .search-input:focus {
-      outline: none;
-      border-color: var(--soft-sage);
-      box-shadow: 0 0 0 3px rgba(207, 232, 229, 0.1);
-      background: rgba(255, 255, 255, 1);
-    }
-
-    .search-icon {
-      position: absolute;
-      left: 1rem;
-      top: 50%;
-      transform: translateY(-50%);
-      color: var(--text-tertiary);
-      width: 20px;
-      height: 20px;
-    }
-
-    /* Table Container */
-    .table-container {
-      background: rgba(255, 255, 255, 0.95);
-      border-radius: 24px;
-      overflow: hidden;
-      box-shadow: var(--card-shadow);
-      border: 1px solid rgba(255, 255, 255, 0.5);
-      backdrop-filter: blur(10px);
-    }
-
-    .table-wrapper {
-      overflow-x: auto;
-    }
-
-    .table-custom {
-      width: 100%;
-      border-collapse: collapse;
-      margin: 0;
-    }
-
-    .table-custom thead {
-      background: linear-gradient(135deg, rgba(207, 232, 229, 0.1), rgba(214, 230, 242, 0.1));
-      border-bottom: 2px solid rgba(207, 232, 229, 0.2);
-    }
-
-    .table-custom th {
-      padding: 1.25rem 1.5rem;
-      font-weight: 700;
-      font-size: 0.9rem;
-      text-transform: uppercase;
-      letter-spacing: 0.5px;
-      color: var(--text-primary);
-      text-align: left;
-      white-space: nowrap;
-    }
-
-    .table-custom tbody tr {
-      border-bottom: 1px solid rgba(207, 232, 229, 0.15);
-      transition: all 0.3s ease;
-    }
-
-    .table-custom tbody tr:hover {
-      background: rgba(207, 232, 229, 0.05);
-    }
-
-    .table-custom tbody tr:last-child {
-      border-bottom: none;
-    }
-
-    .table-custom td {
-      padding: 1.25rem 1.5rem;
-      color: var(--text-secondary);
-      font-size: 0.95rem;
-    }
-
-    .patient-name-cell {
-      font-weight: 600;
-      color: var(--text-primary);
-    }
-
-    .score-cell {
-      font-weight: 700;
-      font-size: 1.1rem;
-      color: var(--text-primary);
-    }
-
-    /* Status Badge in Table */
-    .status-badge-table {
-      display: inline-flex;
-      align-items: center;
-      gap: 0.5rem;
-      padding: 0.5rem 1rem;
-      border-radius: 12px;
-      font-weight: 600;
-      font-size: 0.85rem;
-      white-space: nowrap;
-    }
-
-    .status-badge-table.passed {
-      background: rgba(168, 213, 186, 0.15);
-      color: #2D5F47;
-      border: 1px solid rgba(168, 213, 186, 0.4);
-    }
-
-    .status-badge-table.failed {
-      background: rgba(232, 180, 184, 0.15);
-      color: #8B3A3F;
-      border: 1px solid rgba(232, 180, 184, 0.4);
-    }
-
-    .status-dot {
-      width: 8px;
-      height: 8px;
-      border-radius: 50%;
-      display: inline-block;
-    }
-
-    .status-badge-table.passed .status-dot {
-      background: #2D5F47;
-    }
-
-    .status-badge-table.failed .status-dot {
-      background: #8B3A3F;
-    }
-
-    /* Date Cell */
-    .date-cell {
-      color: var(--text-tertiary);
-      font-size: 0.9rem;
-    }
-
-    /* Detail Button */
-    .btn-detail {
-      padding: 0.5rem 1rem;
-      border-radius: 10px;
-      border: 2px solid rgba(207, 232, 229, 0.3);
-      background: rgba(207, 232, 229, 0.1);
-      color: var(--text-primary);
-      font-weight: 600;
-      font-size: 0.85rem;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      white-space: nowrap;
-      display: inline-flex;
-      align-items: center;
-      gap: 0.5rem;
-    }
-
-    .btn-detail:hover {
-      background: rgba(207, 232, 229, 0.2);
-      border-color: var(--soft-sage);
-      transform: translateY(-2px);
-    }
-
-    .btn-detail svg {
-      width: 16px;
-      height: 16px;
-    }
-
-    /* Empty State */
-    .empty-state {
-      text-align: center;
-      padding: 3rem 2rem;
-      color: var(--text-secondary);
-    }
-
-    .empty-state-icon {
-      width: 80px;
-      height: 80px;
-      margin: 0 auto 1.5rem;
-      background: rgba(207, 232, 229, 0.1);
-      border-radius: 16px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: var(--soft-sage);
-    }
-
-    .empty-state-icon svg {
-      width: 40px;
-      height: 40px;
-    }
-
-    .empty-state-title {
-      font-size: 1.1rem;
-      font-weight: 600;
-      color: var(--text-primary);
-      margin-bottom: 0.5rem;
-    }
-
-    .empty-state-text {
-      font-size: 0.95rem;
-      color: var(--text-tertiary);
-    }
-
-    /* Stats Summary */
-    .stats-summary {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 1.5rem;
-      margin-bottom: 2rem;
-    }
-
-    .stat-card {
-      background: rgba(255, 255, 255, 0.9);
-      border-radius: 16px;
-      padding: 1.5rem;
-      text-align: center;
-      border: 2px solid rgba(207, 232, 229, 0.2);
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-    }
-
-    .stat-label {
-      font-size: 0.85rem;
-      color: var(--text-tertiary);
-      text-transform: uppercase;
-      letter-spacing: 0.3px;
-      margin-bottom: 0.75rem;
-      font-weight: 600;
-    }
-
-    .stat-value {
-      font-size: 2rem;
-      font-weight: 700;
-      background: linear-gradient(135deg, var(--soft-sage), var(--soft-blue));
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-    }
-
-    /* Responsive */
-    @media (max-width: 768px) {
-      .main-container {
-        padding: 1.5rem 0.75rem;
-      }
-
-      .header-bar {
-        margin-bottom: 2rem;
-      }
-
-      .header-title h1 {
-        font-size: 1.3rem;
-      }
-
-      .stats-summary {
-        grid-template-columns: 1fr;
-      }
-
-      .table-custom th {
-        padding: 1rem 0.75rem;
-        font-size: 0.8rem;
-      }
-
-      .table-custom td {
-        padding: 1rem 0.75rem;
-        font-size: 0.9rem;
-      }
-
-      .btn-detail {
-        padding: 0.4rem 0.8rem;
-        font-size: 0.8rem;
-      }
-
-      .table-wrapper {
-        overflow-x: auto;
-        -webkit-overflow-scrolling: touch;
-      }
-    }
-
-    @media (max-width: 576px) {
-      .main-container {
-        padding: 1rem 0.5rem;
-      }
-
-      .content-wrapper {
-        max-width: 100%;
-      }
-
-      .header-bar {
-        margin-bottom: 1.5rem;
-      }
-
-      .header-title h1 {
-        font-size: 1.15rem;
-      }
-
-      .stats-summary {
-        gap: 1rem;
-      }
-
-      .stat-card {
-        padding: 1rem;
-      }
-
-      .stat-value {
-        font-size: 1.5rem;
-      }
-
-      .search-input {
-        padding: 0.9rem 1.25rem 0.9rem 3rem;
-        font-size: 0.9rem;
-      }
-
-      .table-custom th,
-      .table-custom td {
-        padding: 0.75rem 0.5rem;
-        font-size: 0.8rem;
-      }
-
-      .patient-name-cell {
-        font-size: 0.85rem;
-      }
-
-      .score-cell {
-        font-size: 0.95rem;
-      }
-
-      .btn-detail {
-        padding: 0.35rem 0.6rem;
-        font-size: 0.75rem;
-      }
-
-      .status-badge-table {
-        padding: 0.4rem 0.75rem;
-        font-size: 0.75rem;
-      }
-
-      .empty-state {
-        padding: 2rem 1rem;
-      }
-
-      .empty-state-icon {
-        width: 60px;
-        height: 60px;
-      }
-
-      .empty-state-icon svg {
-        width: 30px;
-        height: 30px;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="css/hasil_post_test.css">
   <script src="https://cdn.tailwindcss.com/3.4.17" type="text/javascript"></script>
   <script src="/_sdk/data_sdk.js" type="text/javascript"></script>
   <style>body { box-sizing: border-box; }</style>
@@ -993,8 +193,7 @@
     function handleDetail(id) {
       const item = postTestData.find(item => item.id === id);
       if (item) {
-        // In a real app, navigate to detail page
-        alert(`Membuka detail Post Test: ${item.name}\nSkor: ${item.score}\nStatus: ${item.status === 'passed' ? 'Lulus' : 'Tidak Lulus'}`);
+        window.location.href = 'detail_post_test.html'
       }
     }
 
